added redis datastore via upstash

--- a/03-auth/package.json
+++ b/03-auth/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@stackframe/stack": "^2.8.41",
     "@uiw/react-md-editor": "^4.0.8",
+    "@upstash/redis": "^1.36.1",
+    "@vercel/blob": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
