--- a/03-auth/package.json
+++ b/03-auth/package.json
@@ -17,6 +17,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/render": "^2.0.2",
     "@stackframe/stack": "^2.8.41",
     "@uiw/react-md-editor": "^4.0.8",
     "@upstash/redis": "^1.36.1",
@@ -30,6 +31,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "resend": "^6.7.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
